--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
-<html><body><p>Hello!</p></body</html>
+<!doctype html>
+<html lang="en-US" itemscope itemtype="http://schema.org/WebSite">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>gezes</title>
+    <meta name="description" content="Gezes is data visualization studio based in Istanbul, TR" />
+    <meta name="revisit-after" content="1 month" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="canonical" href="https://gezes.com/" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/icon-256x256.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#32A6BE">
+    <meta name="theme-color" content="#ebebeb">
+    <meta property="og:title" content="gezes" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gezes.com/" />
+    <meta property="og:image" content="icon-512x512.png" />
+    <meta property="og:description" content="Gezes is data visualization studio based in Istanbul, TR" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@gezesstudio">
+    <meta name="twitter:title" content="gezesstudio">
+    <meta name="twitter:description" content="Gezes is data visualization studio based in Istanbul, TR">
+    <meta name="twitter:creator" content="@gezesstudio">
+    <meta name="twitter:image" content="home.png">
+    <style>
+        html {
+            background: #fff;
+        }
+        body {
+            background-image: -webkit-gradient(linear, left top, left 80%, from(rgb(86.3%, 87.4%, 86.3%)), to(#ebebeb));
+            background-image: -webkit-linear-gradient(top, #fdfdfd, #ebebeb);
+            background-image: linear-gradient(top, rgb(86.3%, 87.4%, 86.3%), #ebebeb);
+            width: 90vw;
+            height: 90vh;
+            min-height: 600px;
+            margin: 10px;
+            padding: calc(5vh - 10px) calc(5vw - 10px);
+        }
+        html,
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+            text-rendering: optimizeLegibility;
+            -webkit-font-feature-settings: "kern" 1, "kern";
+            font-feature-settings: "kern" 1, "kern";
+            -webkit-font-kerning: normal;
+            font-kerning: normal;
+            -webkit-font-smoothing: antialiased;
+            line-height: 1.33;
+            letter-spacing: .02em;
+        }
+        body * {
+            background-color: transparent;
+            -webkit-text-decoration-skip: objects
+        }
+        h1 {
+            font-size: 1.67em;
+            margin: 0.67em 0;
+            margin-bottom: 0.99em;
+        }
+        h2 {
+            font-size: 1.33em;
+            margin: 0.33em 0;
+        }
+        #logo {
+            width: 70px;
+            height: 70px;
+            border: 2px #222 solid;
+            border-radius: 50%;
+            padding: 10px;
+            margin: 2em 0;
+        }
+        svg:not(:root) {
+            overflow: hidden
+        }
+        svg,
+        svg path,
+        a {
+            transition: 0.4s;
+        }
+        #logo path {
+            fill: #222;
+        }
+        #logo:hover {
+            border-color: #32A6BE;
+            background: #32A6BE
+        }
+        #logo:hover path {
+            fill: #eee;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            height: 70vh;
+            max-width: 620px;
+            justify-content: space-between;
+            margin: 0.5em;
+            padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+        }
+        section {
+            flex: 1;
+            margin-bottom: 1em;
+        }
+        a:link,
+        a:visited {
+            color: #32A6BE;
+            text-decoration: none;
+        }
+        a:hover {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        a:active,
+        a:hover {
+            outline-width: 0
+        }
+        #contact ul {
+            padding: 0;
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+        }
+        #contact ul li {
+            display: block;
+            flex: 0;
+            margin-right: 1.5em;
+        }
+        #contact .icon {
+            width: 32px;
+            height: 32px;
+        }
+        #contact .icon path {
+            fill: #222;
+        }
+        #contact .icon:hover path {
+            fill: #32A6BE;
+        }
+		#head .div {
+            height: 200px;
+            width: 200px;
+		}
+    </style>
+</head>
+<body>
+    <header>
+	<div id="head">
+        <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512">
+			<circle style="fill:#EBF0F2;" cx="256" cy="256" r="256"/>
+			<circle style="fill:#32BEA6;" cx="256" cy="256" r="177.44"/>
+			<circle cx="256" cy="256" r="91.128"/>
+			<circle style="fill:#FFFFFF;" cx="295.76" cy="210.816" r="30.952"/>
+		</svg>
+	</div>
+    </header>
+    <main>
+        <section id="introduction">
+            <h1>Hello,</h1>
+            <p>
+                <br/>Gezes is data visualization studio based in Istanbul, TR
+            </p>
+        </section>
+        <section id="contact">
+            <h2>Get In Touch</h2>
+            <ul>
+                <li class="twitter">
+                    <a href="https://twitter.com/gezesstudio" rel="nofollow" title="Follow us on Twitter">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
+                            <path d="M32 7.075a12.941 12.941 0 0 1-3.769 1.031 6.601 6.601 0 0 0 2.887-3.631 13.21 13.21 0 0 1-4.169 1.594A6.565 6.565 0 0 0 22.155 4a6.563 6.563 0 0 0-6.563 6.563c0 .512.056 1.012.169 1.494A18.635 18.635 0 0 1 2.23 5.195a6.56 6.56 0 0 0-.887 3.3 6.557 6.557 0 0 0 2.919 5.463 6.565 6.565 0 0 1-2.975-.819v.081a6.565 6.565 0 0 0 5.269 6.437 6.574 6.574 0 0 1-2.968.112 6.588 6.588 0 0 0 6.131 4.563 13.17 13.17 0 0 1-9.725 2.719 18.568 18.568 0 0 0 10.069 2.95c12.075 0 18.681-10.006 18.681-18.681 0-.287-.006-.569-.019-.85A13.216 13.216 0 0 0 32 7.076z"
+                            />
+                        </svg>
+                    </a>
+                </li>
+                <li class="github">
+                    <a href="https://github.com/gezes" rel="nofollow" title="Follow us on Github">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
+                            <path d="M16 .395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182.8.148 1.094-.347 1.094-.77 0-.381-.015-1.642-.022-2.979-4.452.968-5.391-1.888-5.391-1.888-.728-1.849-1.776-2.341-1.776-2.341-1.452-.993.11-.973.11-.973 1.606.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33.143-1.034.558-1.74 1.016-2.14-3.554-.404-7.29-1.777-7.29-7.907 0-1.747.625-3.174 1.649-4.295-.166-.403-.714-2.03.155-4.234 0 0 1.344-.43 4.401 1.64a15.353 15.353 0 0 1 4.005-.539c1.359.006 2.729.184 4.008.539 3.054-2.07 4.395-1.64 4.395-1.64.871 2.204.323 3.831.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895.574.497 1.085 1.47 1.085 2.963 0 2.141-.019 3.864-.019 4.391 0 .426.288.925 1.099.768C27.421 29.457 32 23.462 32 16.395c0-8.837-7.164-16-16-16z"
+                            />
+                        </svg>
+                    </a>
+                </li>
+                <li class="email">
+                    <a href="&#x61;&#x6C;&#x70;&#x65;&#x72;&#x40;&#x67;&#x65;&#x7A;&#x65;&#x73;&#x2E;&#x63;&#x6F;&#x6D;"
+                        rel="nofollow" target="_blank" title="Send us an email">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
+                            <path d="M29 4H3C1.35 4 0 5.35 0 7v20c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3V7c0-1.65-1.35-3-3-3zM12.461 17.199L4 23.789V8.113l8.461 9.086zM5.512 8h20.976L16 15.875 5.512 8zm7.278 9.553L16 21l3.21-3.447L25.79 26H6.211l6.58-8.447zm6.749-.354L28 8.113v15.676l-8.461-6.59z"
+                            />
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
