--- a/index.html
+++ b/index.html
@@ -157,9 +157,8 @@
     </header>
     <main>
         <section id="introduction">
-            <h1>Hello,</h1>
             <p>
-                <br/>Gezes is data visualization studio based in Istanbul, TR
+                <h1>Gezes is data visualization studio based in Istanbul, TR</h1>
             </p>
         </section>
         <section id="contact">
@@ -182,7 +181,7 @@
                     </a>
                 </li>
                 <li class="email">
-                    <a href="&#x61;&#x6C;&#x70;&#x65;&#x72;&#x40;&#x67;&#x65;&#x7A;&#x65;&#x73;&#x2E;&#x63;&#x6F;&#x6D;"
+                    <a href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#x6F;&#x3A;&#x61;&#x6C;&#x70;&#x65;&#x72;&#x40;&#x67;&#x65;&#x7A;&#x65;&#x73;&#x2E;&#x63;&#x6F;&#x6D;"
                         rel="nofollow" target="_blank" title="Send us an email">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
                             <path d="M29 4H3C1.35 4 0 5.35 0 7v20c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3V7c0-1.65-1.35-3-3-3zM12.461 17.199L4 23.789V8.113l8.461 9.086zM5.512 8h20.976L16 15.875 5.512 8zm7.278 9.553L16 21l3.21-3.447L25.79 26H6.211l6.58-8.447zm6.749-.354L28 8.113v15.676l-8.461-6.59z"
