--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en-US" itemscope itemtype="http://schema.org/WebSite">
+<html itemscope itemtype="http://schema.org/WebSite">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>gezes</title>
+    <title>Gezes</title>
     <meta name="description" content="Gezes is data visualization studio based in Istanbul, TR" />
     <meta name="revisit-after" content="1 month" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -165,7 +165,7 @@
             <h2>Get In Touch</h2>
             <ul>
                 <li class="twitter">
-                    <a href="https://twitter.com/gezesstudio" rel="nofollow" title="Follow us on Twitter">
+                    <a href="https://twitter.com/gezesstudio" rel="nofollow" target="_blank" title="Follow us on Twitter">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
                             <path d="M32 7.075a12.941 12.941 0 0 1-3.769 1.031 6.601 6.601 0 0 0 2.887-3.631 13.21 13.21 0 0 1-4.169 1.594A6.565 6.565 0 0 0 22.155 4a6.563 6.563 0 0 0-6.563 6.563c0 .512.056 1.012.169 1.494A18.635 18.635 0 0 1 2.23 5.195a6.56 6.56 0 0 0-.887 3.3 6.557 6.557 0 0 0 2.919 5.463 6.565 6.565 0 0 1-2.975-.819v.081a6.565 6.565 0 0 0 5.269 6.437 6.574 6.574 0 0 1-2.968.112 6.588 6.588 0 0 0 6.131 4.563 13.17 13.17 0 0 1-9.725 2.719 18.568 18.568 0 0 0 10.069 2.95c12.075 0 18.681-10.006 18.681-18.681 0-.287-.006-.569-.019-.85A13.216 13.216 0 0 0 32 7.076z"
                             />
@@ -173,7 +173,7 @@
                     </a>
                 </li>
                 <li class="github">
-                    <a href="https://github.com/gezes" rel="nofollow" title="Follow us on Github">
+                    <a href="https://github.com/gezes" rel="nofollow" target="_blank" title="Follow us on Github">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="icon">
                             <path d="M16 .395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182.8.148 1.094-.347 1.094-.77 0-.381-.015-1.642-.022-2.979-4.452.968-5.391-1.888-5.391-1.888-.728-1.849-1.776-2.341-1.776-2.341-1.452-.993.11-.973.11-.973 1.606.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33.143-1.034.558-1.74 1.016-2.14-3.554-.404-7.29-1.777-7.29-7.907 0-1.747.625-3.174 1.649-4.295-.166-.403-.714-2.03.155-4.234 0 0 1.344-.43 4.401 1.64a15.353 15.353 0 0 1 4.005-.539c1.359.006 2.729.184 4.008.539 3.054-2.07 4.395-1.64 4.395-1.64.871 2.204.323 3.831.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895.574.497 1.085 1.47 1.085 2.963 0 2.141-.019 3.864-.019 4.391 0 .426.288.925 1.099.768C27.421 29.457 32 23.462 32 16.395c0-8.837-7.164-16-16-16z"
                             />
